--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <p>
                 About me:      
                 <br>
-                I'm a third year majoring in Computer Science at the University of Oregon. 
+                I'm a fourth year majoring in Computer Science at the University of Oregon.
+                <br>
+                I'm expected to graduate in 2023. 
                 <br>  
                 I'm a member of UO's Women in Computer Science and Sigma Kappa Sorority. 
             </p>
