--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/foreheaddent" class="icon brands fa-twitter"><span>Twitter</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -32,7 +31,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Madeline Porcaro</h1>
-									<p>Student at the University of Oregon</p>
+									<p>Recent CS grad from the University of Oregon</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
