added lofi spotify playlist

--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									As a student, my work varies from network engineering to building software applications. 
-									A majority of my interests fall into enginerring with accesability in mind and accesible STEM education for
-									everyone. 
+									My work varies from network engineering to building software applications. I love collaborative
+									and creative problem solving. 
 								</p>
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="https://open.spotify.com/playlist/1sSozZPpZijnUqGQafhWdp?si=d004a2dde9f64533" class="image fit"><img src="images/study.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
