--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="http://ix.cs.uoregon.edu/~mporcaro/cs451-final/main.html" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="https://github.com/orcap23/cs451" class="image fit"><img src="images/pic01.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
