reshaping the directory

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> Web Sandbox </title>
-    <link rel="stylesheet" href="/css/index.css"> 
+    <link rel="stylesheet" href="/public/index.css"> 
 </head>
 <body>
     <h1>
