--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 
 <head>
-    <title> Web Sandbox </title>
-    <link rel="stylesheet" href="/public/index.css"> 
+    <title> Mads </title>
+    <link rel="stylesheet" href="/public/index.css">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <h1>
@@ -15,5 +19,10 @@
         project to help me keep my skills sharp. 
     </p>
     <button> Button </button>
+	<footer>
+		<p>
+			Courtesy of Favicon for the Favicon
+		</p>
+	 </footer>
 </body>
 </html>
