--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title> Mads </title>
+	<title> Mads </title>
     <link rel="stylesheet" href="/public/index.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -20,7 +20,7 @@
     </p>
     <button> Button </button>
 	<footer>
-		<p>
+		<p id="footie">
 			Courtesy of Favicon for the Favicon
 		</p>
 	 </footer>
