background color change

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 	<title> Mads </title>
     <link rel="stylesheet" href="/public/index.css">
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+	<link rel="manifest" href="/img/site.webmanifest">
 </head>
 <body>
     <h1>
@@ -18,7 +18,7 @@
         In an effort to keep up my skills as dev/engineer I have decided to make this ongoing
         project to help me keep my skills sharp. 
     </p>
-    <button> Button </button>
+    <button class="button"> Button </button>
 	<footer>
 		<p id="footie">
 			Courtesy of Favicon for the Favicon
