--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     </p>
     <button class="button"> Button </button>
 	<footer>
-		<p id="footie">
-			Courtesy of Favicon for the Favicon
+		<p id="footer">
+			<a href="https://www.linkedin.com/in/maddie-p-1b203b18b/"> LinkedIn </a> |
+			<a href="https://github.com/orcap23"> GitHub</a>
+			
 		</p>
 	 </footer>
+
 </body>
 </html>
