--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	<footer>
 		<p id="footer">
 			<a href="https://www.linkedin.com/in/maddie-p-1b203b18b/"> LinkedIn </a> |
-			<a href="https://github.com/orcap23"> GitHub</a>
+			<a href="https://github.com/orcap23"> GitHub</a> |
+			<a href="mailto:madeline.porcaro@gmail.com"> Email Me!</a>
 			
 		</p>
 	 </footer>
