--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title> Mads </title>
     <link rel="stylesheet" href="/public/index.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="public/img/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="public/img/favicon-16x16.png">
 	<link rel="manifest" href="/img/site.webmanifest">
 </head>
 <body>
@@ -18,7 +18,7 @@
         In an effort to keep up my skills as dev/engineer I have decided to make this ongoing
         project to help me keep my skills sharp. 
     </p>
-    <button class="button"> Button </button>
+    <button> Button </button>
 	<footer>
 		<p id="footer">
 			<a href="https://www.linkedin.com/in/maddie-p-1b203b18b/"> LinkedIn </a> |
