--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 <head>
 	<title> Mads </title>
     <link rel="stylesheet" href="/public/index.css">
-	<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="public/img/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="public/img/favicon-16x16.png">
-	<link rel="manifest" href="/img/site.webmanifest">
+	<link rel="icon" href="/public/img/favicon.ico">
 </head>
 <body>
     <h1>
