--- a/index.html
+++ b/index.html
@@ -2,20 +2,28 @@
 <html lang="en">
 
 <head>
+	<meta charset="utf-8">
 	<title> Mads </title>
-    <link rel="stylesheet" href="/public/index.css">
-	<link rel="icon" href="/public/img/favicon.ico">
+    <link rel="stylesheet" href="/index.css">
+	<link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
+	<link rel="icon" href="/img/favicon-16x16.png">
+	<link rel="icon" href="/img/favicon-32x32.png">
+	<link rel="icon" href="/img/favicon.ico">
 </head>
 <body>
     <h1>
         Howdy!
     </h1>
     <p> 
-        Hi, name is Maddie Porcaro. I have a BS in Computer Science from the University in 
+        Hi, name is Maddie Porcaro. I go by Mads. I have a BS in Computer Science from the University in 
         In an effort to keep up my skills as dev/engineer I have decided to make this ongoing
         project to help me keep my skills sharp. 
     </p>
-    <button> Button </button>
+	<p>
+		I'm really over my job hunt. I've been looking for work since 2023. I am a barista for the 
+		time being <sub> (hopefully) </sub> and I am really tired of applying.
+	</p>
+    <button> Nothing Button </button>
 	<footer>
 		<p id="footer">
 			<a href="https://www.linkedin.com/in/maddie-p-1b203b18b/"> LinkedIn </a> |
