--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 		I'm really over my job hunt. I've been looking for work since 2023. I am a barista for the 
 		time being <sub> (hopefully) </sub> and I am really tired of applying.
 	</p>
+	<p> In the meantime, I'm going to spend an ungodly amount of time working on this.
+		<br>
+		I also like to look at trends, whether it's Pinterest or global trade. I'm not picky.
+	</p>
     <button> Nothing Button </button>
 	<footer>
 		<p id="footer">
