updates to index.css and index.html

--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
 	<p>
 		I'm really over my job hunt. I've been looking for work since 2023. I am a barista for the 
 		time being <sub> (hopefully) </sub> and I am really tired of applying.
+		<br>
+		Ask me about coffee! I love to talk about it <sub> (and drink it) </sub>.
 	</p>
 	<p> In the meantime, I'm going to spend an ungodly amount of time working on this.
 		<br>
+		<br>
 		I also like to look at trends, whether it's Pinterest or global trade. I'm not picky.
+		<br>
 	</p>
     <button> Nothing Button </button>
 	<footer>
