--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
 	<meta charset="utf-8">
 	<title> Mads </title>
-    <link rel="stylesheet" href="../index.css">
-	<link rel="apple-touch-icon" href="../img/apple-touch-icon.png">
-	<link rel="icon" href="../img/favicon-16x16.png">
-	<link rel="icon" href="../img/favicon-32x32.png">
-	<link rel="icon" href="../img/favicon.ico">
+    <link rel="stylesheet" href="/public/index.css">
+	<link rel="apple-touch-icon" href="/public/img/apple-touch-icon.png">
+	<link rel="icon" href="public/img/favicon-16x16.png">
+	<link rel="icon" href="public/img/favicon-32x32.png">
+	<link rel="icon" href="public/img/favicon.ico">
 </head>
 <body>
     <h1>
