font color change time

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <p> 
         Hi, name is Maddie Porcaro. I go by Mads. I have a BS in Computer Science from the University in 
         In an effort to keep up my skills as dev/engineer I have decided to make this ongoing
-        project to help me keep my skills sharp. 
+        project to help me keep my skills sharp.
+		<br>
+		Currently trying to learn German and drive a manual transmission.
+	
     </p>
 	<p>
 		I'm really over my job hunt. I've been looking for work since 2023. I am a barista for the 
