--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
         Hi, name is Maddie Porcaro. I go by Mads. I have a BS in Computer Science from the University in 
         In an effort to keep up my skills as dev/engineer I have decided to make this ongoing
         project to help me keep my skills sharp.
-		<br>
-		Currently trying to learn German and drive a manual transmission.
 	
     </p>
 	<p>
@@ -34,7 +32,9 @@
 		I also like to look at trends, whether it's Pinterest or global trade. I'm not picky.
 		<br>
 	</p>
-    <button> Nothing Button </button>
+	<div>
+		<button> Nothing Button </button>
+	</div>
 	<footer>
 		<p id="footer">
 			<a href="https://www.linkedin.com/in/maddie-p-1b203b18b/"> LinkedIn </a> |
