trying an image now

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <h1>
         Howdy!
     </h1>
+	<div>
+		<img src="/public/img/coffee.JPG" alt="coffee" class="left"
+	</div>
 	<div class="text">
 		<p> 
 			Hi, name is Maddie Porcaro. I go by Mads. I have a BS in Computer Science from the University in 
