--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Howdy!
     </h1>
 	<div>
-		<img src="/public/img/coffee.JPG" alt="coffee" class="left"
+		<img src="/public/img/coffee.JPG" alt="coffee" class="left" id="coffeImg">
 	</div>
 	<div class="text">
 		<p> 
