--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <h1>
         Howdy!
     </h1>
-	<div>
+	<div class="left">
 		<img src="/public/img/coffee.JPG" alt="coffee" class="left" id="coffeImg">
 	</div>
-	<div class="text">
+	<div class="right">
 		<p> 
 			Hi, name is Maddie Porcaro. I go by Mads. I have a BS in Computer Science from the University in 
 			In an effort to keep up my skills as dev/engineer I have decided to make this ongoing
