--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Howdy!
     </h1>
 	<div class="left">
-		<img src="/public/img/coffee.JPG" alt="coffee" class="left" id="coffeImg">
+		<img src="/public/img/coffee.JPG" alt="coffee" style="flex-grow: 1; flex-shrink: 1; flex-basis: 30%; min-width: 200px; max-width: 70%; padding: 4px;">
 	</div>
 	<div class="right">
 		<p> 
