--- a/index.html
+++ b/index.html
@@ -14,30 +14,33 @@
     <h1>
         Howdy!
     </h1>
-	<div class="left">
-		<img src="/public/img/coffee.JPG" alt="coffee" style="flex-grow: 1; flex-shrink: 1; flex-basis: 30%; min-width: 200px; max-width: 70%; padding: 4px;">
+	<div>
+		<div class="left">
+			<img src="/public/img/coffee.JPG" alt="coffee" style="flex-grow: 1; flex-shrink: 1; flex-basis: 30%; min-width: 200px; max-width: 70%; padding: 4px;">
+		</div>
+		<div style="flex-grow: 2; flex-shrink: 2; flex-basis: 60%;">
+			<p> 
+				Hi, name is Maddie Porcaro. I go by Mads. I have a BS in Computer Science from the University in 
+				In an effort to keep up my skills as dev/engineer I have decided to make this ongoing
+				project to help me keep my skills sharp.
+			
+			</p>
+			<p>
+				I'm really over my job hunt. I've been looking for work since 2023. I am a barista for the 
+				time being <sub> (hopefully) </sub> and I am really tired of applying.
+				<br>
+				Ask me about coffee! I love to talk about it <sub> (and drink it) </sub>.
+			</p>
+			<p> In the meantime, I'm going to spend an ungodly amount of time working on this.
+				<br>
+				<br>
+				I also like to look at trends, whether it's Pinterest or global trade. I'm not picky.
+				<br>
+			</p>
+	
+		</div>
 	</div>
-	<div class="right">
-		<p> 
-			Hi, name is Maddie Porcaro. I go by Mads. I have a BS in Computer Science from the University in 
-			In an effort to keep up my skills as dev/engineer I have decided to make this ongoing
-			project to help me keep my skills sharp.
-		
-		</p>
-		<p>
-			I'm really over my job hunt. I've been looking for work since 2023. I am a barista for the 
-			time being <sub> (hopefully) </sub> and I am really tired of applying.
-			<br>
-			Ask me about coffee! I love to talk about it <sub> (and drink it) </sub>.
-		</p>
-		<p> In the meantime, I'm going to spend an ungodly amount of time working on this.
-			<br>
-			<br>
-			I also like to look at trends, whether it's Pinterest or global trade. I'm not picky.
-			<br>
-		</p>
-
-	</div>
+	
     
 	<div class="center">
 		<button> Nothing Button </button>
