--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <h1>
         Howdy!
     </h1>
-	<div>
-		<div class="left">
-			<img src="/public/img/coffee.JPG" alt="coffee" style="flex-grow: 1; flex-shrink: 1; flex-basis: 30%; min-width: 200px; max-width: 70%; padding: 4px;">
+	<div style="display: flex; flex-wrap: wrap; justify-content: center;">
+		<div style="flex-grow: 1; flex-shrink: 1; flex-basis: 30%; min-width: 200px; max-width: 70%; padding: 4px;">
+			<img src="/public/img/coffee.JPG" alt="coffee">
 		</div>
 		<div style="flex-grow: 2; flex-shrink: 2; flex-basis: 60%;">
 			<p> 
