--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<div style="display: flex; flex-wrap: wrap; justify-content: center;">
 		<div style="flex-grow: 1; flex-shrink: 1; flex-basis: 30%; min-width: 200px; max-width: 70%; padding: 4px;">
 			<img src="/public/img/coffee.JPG" alt="coffee">
+			<p> a little bit of my latte art</p>
 		</div>
 		<div style="flex-grow: 2; flex-shrink: 2; flex-basis: 60%;">
 			<p> 
