--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>
         Howdy!
     </h1>
-	<div style="flex-grow: 2; flex-shrink: 2; flex-basis: 60%;">
+	<div class="content" style="flex-grow: 2; flex-shrink: 2; flex-basis: 60%;">
 		<p> 
 			Hi, name is Maddie Porcaro. I go by Mads. I have a BS in Computer Science from the University in 
 			In an effort to keep up my skills as dev/engineer I have decided to make this ongoing
@@ -40,11 +40,10 @@
 		<button> Nothing Button </button>
 	</div>
 	<footer>
-		<p id="footer">
+		<p class="content">
 			<a href="https://www.linkedin.com/in/maddie-p-1b203b18b/"> LinkedIn </a> |
 			<a href="https://github.com/orcap23"> GitHub</a> |
 			<a href="mailto:madeline.porcaro@gmail.com"> Email Me!</a>
-			
 		</p>
 	 </footer>
 
