--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>
         Howdy!
     </h1>
-	<div class="content" style="flex-grow: 2; flex-shrink: 2; flex-basis: 60%;">
+	<div class="content">
 		<p> 
 			Hi, name is Maddie Porcaro. I go by Mads. I have a BS in Computer Science from the University in 
 			In an effort to keep up my skills as dev/engineer I have decided to make this ongoing
