OMG PLEASE CENTER

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 		Hi, name is Maddie Porcaro. I go by Mads. I have a BS in Computer Science from the University in 
 		In an effort to keep up my skills as dev/engineer I have decided to make this ongoing
 		project to help me keep my skills sharp.
-	
 	</p>
 	<p>
 		I'm really over my job hunt. I've been looking for work since 2023. I am a barista for the 
@@ -26,7 +25,8 @@
 		<br>
 		Ask me about coffee! I love to talk about it <sub> (and drink it) </sub>.
 	</p>
-	<p> In the meantime, I'm going to spend an ungodly amount of time working on this.
+	<p> 
+		In the meantime, I'm going to spend an ungodly amount of time working on this.
 		<br>
 		<br>
 		I also like to look at trends, whether it's Pinterest or global trade. I'm not picky.
